Fix the pregame component's css on mobile

--- a/src/app/components/pregame/pregame.component.scss
+++ b/src/app/components/pregame/pregame.component.scss
@@ -105,6 +105,7 @@
   align-items: center;
   flex-direction: column;
   width: 700px;
+  max-width: 100%;
   margin: 0 20px;
 
   .description {
